git push origin main

--- a/admin/index.html
+++ b/admin/index.html
@@ -1,50 +1,1 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <title>Админка</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f4f4f9;
-      margin: 0;
-      padding: 0;
-    }
-    header {
-      background: #222;
-      color: #fff;
-      padding: 15px;
-      text-align: center;
-    }
-    main {
-      padding: 20px;
-    }
-    .card {
-      background: #fff;
-      padding: 15px;
-      margin-bottom: 15px;
-      border-radius: 8px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    }
-  </style>
-</head>
-<body>
-  <header>
-    <h1>Админка 🚀</h1>
-  </header>
-  <main>
-    <div class="card">
-      <h2>Добро пожаловать!</h2>
-      <p>Здесь будет панель управления сайтом.</p>
-    </div>
-    <div class="card">
-      <h2>Что дальше?</h2>
-      <ul>
-        <li>Добавить вход по паролю 🔑</li>
-        <li>Редактировать тексты прямо с сайта</li>
-        <li>Загружать фото и видео</li>
-      </ul>
-    </div>
-  </main>
-</body>
-</html>
+<!doctype html><html lang="ru"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1"><title>Admin</title><link rel="icon" href="/assets/cms-logo.svg"><script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script></head><body></body></html>
