add cms admin and friends portals

--- a/admin/index.html
+++ b/admin/index.html
@@ -1,1 +1,13 @@
-<!doctype html><html lang="ru"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1"><title>Admin</title><link rel="icon" href="/assets/cms-logo.svg"><script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script></head><body></body></html>
+<!doctype html>
+<html lang="ru">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Admin</title>
+    <!-- Виджет входа Netlify Identity (чтобы был логин/логаут) -->
+    <script defer src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+    <!-- Decap (Netlify) CMS -->
+    <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+  </head>
+  <body></body>
+</html>
