--- a/friends/index.html
+++ b/friends/index.html
@@ -1,1 +1,18 @@
-<!doctype html><html lang="ru"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1"><title>Friends Portal</title><link rel="icon" href="/assets/cms-logo.svg"><script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script><style>body{margin:0;background:#0f1115;color:#e8ecf1;font:16px/1.6 system-ui,-apple-system,Segoe UI,Roboto,sans-serif}.note{padding:12px 14px;background:#151821;border:1px solid #252b39;border-radius:10px;margin:12px}a{color:#5ea1ff}</style></head><body><div class="note">✍️ Добавь своё воспоминание. Оно попадёт на сайт после одобрения админом.</div></body></html>
+<!doctype html>
+<html lang="ru">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Friends Portal</title>
+    <script defer src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+    <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+    <style>
+      body{margin:0;background:#0f1115;color:#e8ecf1;font:16px/1.6 system-ui,-apple-system,Segoe UI,Roboto,sans-serif}
+      .note{padding:12px 14px;background:#151821;border:1px solid #252b39;border-radius:10px;margin:12px}
+      a{color:#5ea1ff}
+    </style>
+  </head>
+  <body>
+    <div class="note">✍️ Добавь своё воспоминание. Оно появится на сайте после одобрения админом.</div>
+  </body>
+</html>
