--- a/admin/index.html
+++ b/admin/index.html
@@ -4,10 +4,16 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Admin</title>
-    <!-- Виджет входа Netlify Identity (чтобы был логин/логаут) -->
+    <!-- Виджет входа Netlify Identity -->
     <script defer src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <!-- Decap (Netlify) CMS -->
     <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+    <style>
+      body{margin:0;background:#0f1115;color:#e8ecf1;font:16px/1.6 system-ui,-apple-system,Segoe UI,Roboto,sans-serif}
+      .fallback{padding:16px}
+    </style>
   </head>
-  <body></body>
+  <body>
+    <div class="fallback">Если видишь только этот текст — CMS ещё грузится или не нашла <code>admin/config.yml</code>.</div>
+  </body>
 </html>
